QOL CSS changes making minor tweaks to certain appearances, and making the clock have a max width it can skrink to to prevent wrapping of the time h1
I would like to go back in at some point and have a good long think about how to make the clock face a bit more responsive in size. As it is now it is pretty huge at a minimum 700px across. Plus it would be nice to have a dynamic width over a fixed width.

--- a/index.css
+++ b/index.css
@@ -38,12 +38,12 @@ body {
 
 .outerclock {
   justify-content: space-evenly;
-  margin: 20vh auto 0; /* <-- centers clock | Left <--> Right */
+  margin: 25vh auto 0; /* <-- centers clock  Left <--> Right */
 /*   background: var(--ch-light-purple); */
   background: var(--ch-grey);
 /*   background: var(--ch-white-two); */
   padding: 1.5rem 1.5rem;
-  max-width: calc(30% + 200px);
+  width: max(calc(30% + 200px), 700px);
 
 }
 
@@ -58,14 +58,15 @@ body {
 
 .clockface {
   font-size: 3rem;
+  white-space: nowrap;
 }
 .onOff {
   color: var(--ch-black);
 }
 
 .screw {
-  height: 90px;
-  width: 90px;
+  min-height: 90px;
+  min-width: 90px;
   margin: 0 1rem;
   background-image: url("power-button.png");
   background-color: var(--ch-green);
